alterando algumas coisas no index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- 8. Efeito de Menu Deslizante -->
         <div class="menu">Menu</div>
 
-        <!-- 9. Efeito de Sombra Suave -->
+        <!-- 9. Efeito de Sombra -->
         <div class="sombra">Clique Aqui</div>
     </div>
 
