--- a/projeto.html
+++ b/projeto.html
@@ -136,7 +136,7 @@
                 <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
                 Seu navegador não suporta a tag de vídeo.
             </video>
-            <p>Meu primeiro video de mine.</p>
+            <p>Este é o meu primeiro projeto. Ele demonstra como utilizar transições CSS em vídeos.</p>
             <button class="botao-primary">Ver Mais</button>
         </div>
         <div>
