--- a/projeto.html
+++ b/projeto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio Personalizado com Vídeos e Transições</title>
+    <title>Portfólio Personalizado com Efeitos</title>
     <style>
         /* Estilo Geral */
         body {
@@ -16,8 +16,10 @@
         header {
             background-color: #333;
             color: white;
-            padding: 10px 20px;
+            padding: 20px 20px;
             text-align: center;
+            font-size: 30px;
+            font-weight: bold;
         }
 
         nav {
@@ -36,7 +38,7 @@
 
         nav a:hover {
             color: #0056b3;
-            transform: scale(1.1);
+            transform: rotate(10deg);  /* Efeito de rotação ao passar o mouse */
         }
 
         /* Estilo para Botões */
@@ -46,7 +48,7 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
-            transition: background-color 0.4s ease, transform 0.4s ease;
+            transition: background-color 0.4s ease, box-shadow 0.4s ease, transform 0.3s ease-in-out;
         }
 
         .botao-primary {
@@ -56,7 +58,8 @@
 
         .botao-primary:hover {
             background-color: #0056b3;
-            transform: scale(1.1);
+            transform: scale(1.1) rotate(5deg); /* Efeito de escala e rotação */
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .botao-secondary {
@@ -67,6 +70,7 @@
         .botao-secondary:hover {
             background-color: #218838;
             transform: scale(1.1);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
 
         /* Estilo para Vídeos */
@@ -75,12 +79,12 @@
             max-width: 300px;
             height: auto;
             border-radius: 8px;
-            transition: transform 0.4s ease, box-shadow 0.3s ease;
+            transition: transform 0.5s ease-out, box-shadow 0.4s ease-in-out;
         }
 
         .video-zoom:hover {
-            transform: scale(1.1);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            transform: scale(1.1) rotate(5deg); /* Efeito de zoom e rotação */
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
         }
 
         /* Estilo para a seção de conteúdo */
@@ -99,12 +103,14 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 300px;
             text-align: center;
-            transition: box-shadow 0.4s ease, transform 0.4s ease;
+            transition: box-shadow 0.4s ease, transform 0.3s ease-in-out, opacity 0.4s ease-in;
+            opacity: 1;
         }
 
         .conteudo > div:hover {
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            transform: translateY(-10px);
+            transform: translateY(-10px); /* Efeito de elevação */
+            opacity: 0.8; /* Opacidade reduzida ao passar o mouse */
         }
 
         footer {
@@ -114,13 +120,13 @@
             text-align: center;
             margin-top: 40px;
         }
+
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Meu Portfólio</h1>
-        <p>Explore meus projetos e mais!</p>
+        Meu Portfólio Interativo
     </header>
 
     <nav>
@@ -136,7 +142,7 @@
                 <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
                 Seu navegador não suporta a tag de vídeo.
             </video>
-            <p>Este é o meu primeiro projeto. Ele demonstra como utilizar transições CSS em vídeos.</p>
+            <p>Este projeto demonstra a utilização de transições CSS em vídeos com zoom e rotação.</p>
             <button class="botao-primary">Ver Mais</button>
         </div>
         <div>
@@ -145,7 +151,7 @@
                 <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
                 Seu navegador não suporta a tag de vídeo.
             </video>
-            <p>Este projeto utiliza efeitos interativos com vídeos e botões.</p>
+            <p>Explore transições em vídeos e outros efeitos interativos.</p>
             <button class="botao-secondary">Ver Mais</button>
         </div>
     </div>
